@@ -56,7 +56,9 @@ of helper applications. Can be given multiple times to increase
 the output even more.
 .TP
 \fB\-q\fP, \fB\-\-quiet\fP
-Work quietly, exept on commands \fBformats\fP and \fBversion\fP, which still print their output.
+Work quietly, exept on commands \fBformats\fP and \fBversion\fP,
+which still print their output. Conflicts with \fB\-\-verbose\fP.
+If given twice suppresses error output from archive commands.
 .TP
 \fB\-\-non\-interactive\fP
 Try to prevent any interactive user input (i.e. prompting for passwords
