@@ -1,6 +1,9 @@
 3.0.4 (released xx.xx.xxxx)
   * Added support for UDF (.udf) archives with 7z.
-  Closes: GH bug #80
+    Closes: GH bug #80
+  * The options --quiet and --verbose are now mutually exclusive options.
+  * When --quiet is given twice, output on stderr from archive commands is 
+    suppressed. When using the API functions, set verbosity to -2.
 
 3.0.3 (released 04.11.2024)
   * Fix UnicodeDecode errors when logging, especially on windows systems.
